resources/css/index.css
/* ... */
/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px) {
  .modal-content {
    width: 100%;
  }
}

/***********************************************************/
/* Media query for smaller screens */
@media (max-width: 960px) {
  .name{
    left: 40%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    position: absolute;
    left: calc(36% - 2px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 19.5vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 50vh;
    width: 100%;
    padding: 15px 20px 15px 15px;
    left: 1%
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 5vh;
  }

  .caption {
    display: none;
  }
}

@media (max-width: 940px) {
  .name {
    left: 40%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    position: absolute;
    left: calc(36% - 2px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 28vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 68vh;
    width: 100%;
    padding: 15px 20px 15px 15px;
    left: 1%
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    /* margin: 1rem auto 2rem; */
    top: 5vh;
  }

  .caption {
    display: none;
  }
}

@media (max-width: 845px) {
  .name {
    left: 43%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    left: calc(36% - 19px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 30vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 70vh;
    width: calc(100% - 90px);
    padding: 15px 20px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 9vh;
  }
}

@media (max-width: 812px) {
  .name {
    left: 43%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 34%;
    left: calc(36% - 19px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 26vh;
  }

  #quickQuote {
    font-size: 1.4em;
    top: 72vh;
    width: calc(100% - 90px);
    padding: 15px 20px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    width: 18%;
    height: auto;
    padding: 8px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 9vh;
  }
}

@media (max-width: 768px) {
  .name {
      left: 43%;
      transform: translateX(-50%);
      width: 100%;
    }

  .hangingLight {
    height: 40%;
    left: calc(34% - 18px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 28vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 68vh;
    width: calc(100% - 90px);
    padding: 15px 20px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 10vh;
  }
}

@media (max-width: 740px) {
  .name {
    left: 43%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 35%;
    left: calc(33% - 14px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 27vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 69vh;
    width: calc(100% - 90px);
    padding: 15px 20px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    width: 20%;
    height: auto;
    padding: 10px;
    left: 85%;
    transform: translateX(-50%);
    position: absolute;
    top: 9vh;
  }
}

@media (max-width: 600px) {
.name {
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
  }

  .hangingLight {
    height: 40%;
    position: absolute;
    left: calc(30% - 18px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 12.5vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 33vh;
    width: 100%;
    padding: 15px 20px 15px 15px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    width: 45%;
    height: auto;
    padding: 10px;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
    margin: 1rem auto 2rem;
    top: 45vh;
  }
}

@media (max-width: 430px) {
.hangingLight {
    height: 40%;
    position: absolute;
    left: calc(20% - 7px);
    transform: translateX(-50%);
  }

  #openingHeader {
    font-size: 4em;
    position: absolute;
    height: auto;
    width: 100%;
    top: 13vh;
  }

  #quickQuote {
    font-size: 1.5em;
    top: 36vh;
    width: 100%;
    padding: 15px 20px 15px 15px;
    left: 50%;
    transform: translateX(-50%);
  }

  .pictureFrame {
    position: absolute;
    width: 45%;
    height: auto;
    padding: 10px;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
    margin: 1rem auto 2rem;
    top: 53vh;
  }
}
/* ... */

